--- a/Labs/Lab2/Lab2.csproj
+++ b/Labs/Lab2/Lab2.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Circle.cs" />
+    <Compile Include="ICompareable.cs" />
     <Compile Include="IPrint.cs" />
     <Compile Include="Rectangle.cs" />
     <Compile Include="GeoFigure.cs" />
