--- a/Labs/Lab3/Lab3.csproj
+++ b/Labs/Lab3/Lab3.csproj
@@ -47,9 +47,13 @@
     <Compile Include="Matrix.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleList\SimpleList.cs" />
+    <Compile Include="SimpleList\SimpleListItem.cs" />
+    <Compile Include="SimpleStack.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Lab2\Lab2.csproj">
