--- a/Labs/Lab4/Lab4.csproj
+++ b/Labs/Lab4/Lab4.csproj
@@ -80,5 +80,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Lab5\Lab5.csproj">
+      <Project>{3e73fd51-0215-4385-8203-2a43341ad8cb}</Project>
+      <Name>Lab5</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
